fix: missing color costrat in accordions

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1786,6 +1786,7 @@ div.acc-button {
   align-items: center;
   margin-top: 1rem;
   margin-bottom: 2rem;
+  color: #ffffff4d;
 }
 
 div.acc-button img {
